hphp/hack/test/typecheck/inout/bad_inout_decl_special_construct.php.exp
File "bad_inout_decl_special_construct.php", line 4, characters 41-42:
Methods with special semantics cannot have inout parameters. (NastCheck[3043])
